[package]
name = "web21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3.25"
gloo-net = "0.2.5"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
nostr = "0.14.0"
serde_json = "1.0.91"
log = "0.4.17"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.33"
getrandom = { version = "0.2", features = ["js"] }
# need these to compile
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"]}