[package]
name = "web21"
version = "0.5.0"
description = "A demo game where two web browser can connect and move boxes around"
edition = "2021"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
license = "MIT OR Apache-2.0"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]


# [target.'cfg(target_arch = "wasm32")'.dependencies]


[dependencies]
bevy = "0.9"
bevy_ggrs = { version = "0.11", features = ["wasm-bindgen"] }
bevy_asset_loader = "0.14"
matchbox_socket_nostr = {version = "0.0.2", features = ["ggrs-socket"] }


# [profile.dev]
# opt-level = 1

# [profile.release]
# lto = true
# opt-level = 's'
