[package]
name = "web21"
version = "0.5.0"
description = "A demo game where two web browser can connect and move boxes around"
edition = "2021"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
license = "MIT OR Apache-2.0"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]


# [target.'cfg(target_arch = "wasm32")'.dependencies]


[dependencies]
bevy = { version = "0.9.1", default-features = false }
bevy_ggrs = { version = "0.11", features = ["wasm-bindgen"] }
bevy_asset_loader = "0.14.1"
matchbox_socket_nostr = {version = "0.0.2", features = ["ggrs-socket"] }
web-sys = { version = "0.3.60", features = [
    "Document", "Location"# for getting args from query string
] }
console_error_panic_hook = "0.1.7"
console_log = "0.2"
serde_qs = "0.11"
wasm-bindgen = "0.2.83"
ggrs = { version = "0.9.3", features = ["wasm-bindgen"] }
bytemuck = { version = "1.13", features=["derive"]}
clap = { version = "4.1.1", features = ["derive"] }
serde = "1.0.152"
winit = "0.27.5"
log = "0.4.17"

# [profile.dev]
# opt-level = 1

# [profile.release]
# lto = true
# opt-level = 's'
